--- a/templates/index.html
+++ b/templates/index.html
@@ -10,8 +10,8 @@
     <title>Hashtag Viewers</title>
     <!-- Bootstrap Core CSS -->
     <link href='http://fonts.googleapis.com/css?family=Magra:700|Josefin+Sans' rel='stylesheet' type='text/css'>
-    <link href="../static/css/bootstrap.min.css" rel="stylesheet" type="text/css">
-    <link href="../static/css/style.css" rel="stylesheet">
+    <link href="/static/css/bootstrap.min.css" rel="stylesheet" type="text/css">
+    <link href="/static/css/style.css" rel="stylesheet">
 
 </head>
 
@@ -24,7 +24,7 @@
             <input id="hashtag" class="form-control buscar" value="#tuHashTag" placeholder="#tuHashTag" />
             <button class="btn btn-info" id="iniciar">Mostrame!</button>
             <div class="config">
-                <div> 
+                <div>
                     <label>Intervalo entre mensajes:</label>
                     <input class="form-control" type="number" name="freq" id="freq-id" min="5" max="15" value="5">
                 </div>
@@ -60,8 +60,8 @@
 
 
     <!-- Core JavaScript Files -->
-    <script src="../static/js/jquery-1.10.2.js"></script>
-    <script src="../static/js/bootstrap.min.js"></script>
+    <script src="/static/js/jquery-1.10.2.js"></script>
+    <script src="/static/js/bootstrap.min.js"></script>
     <script type="text/javascript">
             String.prototype.linkify_tweet = function() {
                 var tweet = this.replace(/(^|\s)@(\w+)/g, "$1@<a href='http://www.twitter.com/$2'>$2</a>");
@@ -112,14 +112,14 @@
                     $(".busqueda").slideDown();
                     freq = 1000;
                 });
-		
+
                 $("#hashtag").keyup(function(e) {
                     console.log(e.keyCode);
                     if(e.keyCode == 13){
                     $("#iniciar").click();
-                    }	
+                    }
                 });
-                
+
                 ws.onmessage = function(evt) {
                     try {
                         var arr = JSON.parse(evt.data);
@@ -163,7 +163,7 @@
                         try{
                             if(json["media"][0]["media_url"] != undefined)
                                 $temp.find(".url-media").html("<img class='img-responsive img-rounded' src='" + json["media"][0]["media_url"] + "' />");
-                        } catch (e){}         
+                        } catch (e){}
                         $temp.hide();
                         //console.log("Time ->" + timeout);
                         $("#tweets").prepend($temp);
