--- a/timer/templates/timer.html
+++ b/timer/templates/timer.html
@@ -1,12 +1,60 @@
+{% load staticfiles %}
 <!DOCTYPE html>
 <html>
 <head lang="en">
     <meta charset="UTF-8">
     <title></title>
-    <script src="/static/js/jquery-2.1.4.min.js"></script>
-    <script src="/static/js/jquery.timer.js"></script>
+    <script src="{% static 'js/jquery-2.1.4.min.js' %}"></script>
+    <script src="{% static 'js/jquery.timer.js' %}"></script>
 </head>
 <body>
- <h1>Hola! Yo voy a ser un timer</h1>
+  <h1 id="timer">0</h1>
+
+<script>
+    // Utils
+    function pad(number, length) {
+        var str = '' + number;
+        while (str.length < length) {str = '0' + str;}
+        return str;
+    }
+    function formatTime(time) {
+        var hour = parseInt(time / 360000),
+            min = parseInt(time / 6000) - (hour * 60),
+            sec = parseInt(time / 100) - (min * 60) - (hour * 3600),
+            hundredths = pad(time - (sec * 100) - (min * 6000), 2) - (hour * 360000);
+        return (hour > 0 ? pad(hour, 2) : "00") + ":" + (min > 0 ? pad(min, 2) : "00") + ":" + pad(sec, 2) + ":" + (hundredths > 0 ? pad(hundredths, 2) : "00");
+    }
+
+    var HackTimer = function() {
+        var self = this;
+        this.$countdown = $('#timer');
+        this.incrementTime = 20,
+        this.updateTimer = function() {
+            self.$countdown.html(formatTime(self.currentTime));
+            if (self.currentTime == 0) {
+                self._timer.stop();
+                self.timerComplete();
+                return;
+            }
+            self.currentTime -= self.incrementTime / 10;
+            if (self.currentTime < 0) self.currentTime = 0;
+        },
+        this.timerComplete = function() {
+            alert('Se pudrió la momia.');
+        },
+        this.askTime = function() {
+            // Ajax que pregunta el tiempo
+            this.currentTime = 6000;
+        },
+        this.init = function() {
+            // Ajax que pregunta current time o que saca current time de algún lado.
+            self.askTime()  // Current time está en centésimas de segundo.
+            self._timer = $.timer(self.updateTimer, self.incrementTime, true);
+        };
+    }
+
+    var hack_timer = new HackTimer()
+    hack_timer.init();
+</script>
 </body>
 </html>
