--- a/timer/templates/timer.html
+++ b/timer/templates/timer.html
@@ -4,12 +4,37 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title></title>
+
     <script src="{% static 'js/jquery-2.1.4.min.js' %}"></script>
     <script src="{% static 'js/jquery.timer.js' %}"></script>
-</head>
-<body>
-  <h1 id="timer">0</h1>
+    <link href='http://fonts.googleapis.com/css?family=Orbitron' rel='stylesheet' type='text/css'/>
+    <link href="{% static 'css/bootstrap.css' %}" rel='stylesheet' type='text/css'/>
 
+</head>
+<style>
+    #timer-cont {
+        text-align: center;
+        position: relative;
+        margin-top: 300px;
+        width: 100px;
+        font-family: 'Orbitron', sans-serif;
+        font-size: 60px;
+        color: #fff;
+    }
+    #timer {
+        color:#888;
+        text-shadow:0px 0px 1px #333;
+        font-size:150px;
+        position:relative;
+        top:-27px;
+        left:-10px;
+    }
+
+</style>
+<body>
+    <div id="timer-cont" class="col-lg-offset-2 col-lg-8">
+        <span id="timer"></span>
+    </div>
 <script>
     // Utils
     function pad(number, length) {
@@ -44,6 +69,7 @@
         },
         this.askTime = function() {
             // Ajax que pregunta el tiempo
+            // Ejecutar esta función cuando no se muestre el timer para hacer sync con server.
             this.currentTime = 6000;
         },
         this.init = function() {
