--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,7 +38,7 @@ h2 {
 
 .config {
     font-size: 1.5em;
-    width: 100%; 
+    width: 100%;
     display: inline-block;
     padding-top: 30px;
 }
@@ -141,4 +141,32 @@ h2 {
     margin: 0 auto;
     max-width: 100%;
     max-height: 400px;
+}
+
+/*#timer-cont {
+    text-align: center;
+    position: relative;
+    margin-top: 300px;
+    width: 100px;
+    font-family: 'Orbitron', sans-serif;
+    font-size: 60px;
+    color: #fff;
+}
+*/
+#timer {
+    color:#888;
+    text-shadow:0px 0px 1px #333;
+    font-size:150px;
+    position:relative;
+    top:-27px;
+    left:-10px;
+}
+
+.deks {
+    background-color: white;
+    width: 1000px;
+    height: 600px;
+    border-radius: 1px;
+    border-width: 1px;
+    border-style: solid;
 }
