--- a/templates/index.html
+++ b/templates/index.html
@@ -1,3 +1,4 @@
+{% load staticfiles %}
 <!DOCTYPE html>
 <html lang="en">
 
@@ -9,36 +10,31 @@
 
     <title>Hashtag Viewers</title>
     <!-- Bootstrap Core CSS -->
-    <link href='http://fonts.googleapis.com/css?family=Magra:700|Josefin+Sans' rel='stylesheet' type='text/css'>
-    <link href="/static/css/bootstrap.min.css" rel="stylesheet" type="text/css">
-    <link href="/static/css/style.css" rel="stylesheet">
+    <link href='http://fonts.googleapis.com/css?family=Orbitron' rel='stylesheet' type='text/css'/>
+    <link href="{% static 'css/bootstrap.css' %}" rel='stylesheet' type='text/css'/>
+    <link href="{% static 'css/style.css' %}" rel='stylesheet' type='text/css'/>
 
 </head>
 
 <body id="page-top" data-spy="scroll" data-target=".navbar-custom">
 
-    <div class="container">
+    <div class="container" id="desk">
 
-        <div class="busqueda">
-            <h1>¿Qué pasa en Twitter?</h1>
-            <input id="hashtag" class="form-control buscar" value="#tuHashTag" placeholder="#tuHashTag" />
-            <button class="btn btn-info" id="iniciar">Mostrame!</button>
-            <div class="config">
-                <div>
-                    <label>Intervalo entre mensajes:</label>
-                    <input class="form-control" type="number" name="freq" id="freq-id" min="5" max="15" value="5">
-                </div>
-            </div>
+        <div class="desk" id="deskTweets">
+            <button class="btn btn-danger" id="detenerTweets">Pausar</button>
+            <input type="hidden" name="ultimoTweet" id="ultimoTweet" value="0">
+            <h1>Twitter</h1>
         </div>
-
-        <div class="info" style="display:none">
-            <h2 id="ht-select"></h2>
-            <button class="btn btn-danger" id="detener">Detener</button>
-
-            <div class="row" id="tweets">
-
+        <div class="desk" id="deskHackDash">
+            {# <button class="btn btn-danger" id="deteneHackDash">Pausar</button> #}
+            <h1>HackDash</h1>
+        </div>
+        <div class="desk" id="deskTimer">
+            <div id="timer-cont">
+                <span id="timer"></span>
             </div>
-         </div>
+
+        </div>
     </div>
 
 
@@ -59,122 +55,117 @@
         </div>
 
 
-    <!-- Core JavaScript Files -->
-    <script src="/static/js/jquery-1.10.2.js"></script>
-    <script src="/static/js/bootstrap.min.js"></script>
+    <!-- Core JavaScript Files      -->
+    <script src="{% static 'js/jquery-2.1.4.min.js' %}"></script>
+    <script src="{% static 'js/bootstrap.min.js' %}"></script>
+    <script src="{% static 'js/jquery.timer.js' %}"></script>
+    <script src="{% static 'js/jquery.cycle.all.js' %}"></script>
+
     <script type="text/javascript">
-            String.prototype.linkify_tweet = function() {
+        String.prototype.linkify_tweet = function() {
                 var tweet = this.replace(/(^|\s)@(\w+)/g, "$1@<a href='http://www.twitter.com/$2'>$2</a>");
            return tweet.replace(/(^|\s)#(\w+)/g, "$1#<a href='https://twitter.com/search?q=%23$2'>$2</a>");
          };
-    </script>
 
-    <script type="text/javascript">
-        var host = "ws://" + location.host + "/update";
-        ws = new WebSocket(host);
-        detener = false;
-        lastTimeout = 0;
-        var freq = 1000;
-        (function($){
+        function pad(number, length) {
+            var str = '' + number;
+            while (str.length < length) {str = '0' + str;}
+            return str;
+        }
+        function formatTime(time) {
+            var hour = parseInt(time / 360000),
+                min = parseInt(time / 6000) - (hour * 60),
+                sec = parseInt(time / 100) - (min * 60) - (hour * 3600),
+                hundredths = pad(time - (sec * 100) - (min * 6000), 2) - (hour * 360000);
+            return (hour > 0 ? pad(hour, 2) : "00") + ":" + (min > 0 ? pad(min, 2) : "00") + ":" + pad(sec, 2) + ":" + (hundredths > 0 ? pad(hundredths, 2) : "00");
+        }
 
-            $(document).ready(function() {
-                $("#detener").prop('disabled', true);
-                $("#iniciar").prop('disabled', false);
-                $("#hashtag").prop('disabled', false);
+        var HackTimer = function() {
+            var self = this;
+            this.$countdown = $('#timer');
+            this.incrementTime = 20,
+            this.updateTimer = function() {
+                self.$countdown.html(formatTime(self.currentTime));
+                if (self.currentTime == 0) {
+                    self._timer.stop();
+                    self.timerComplete();
+                    return;
+                }
+                self.currentTime -= self.incrementTime / 10;
+                if (self.currentTime < 0) self.currentTime = 0;
+            },
+            this.timerComplete = function() {
+                alert('Se pudrió la momia.');
+            },
+            this.askTime = function() {
+                // Ajax que pregunta el tiempo
+                this.currentTime = 6000;
+            },
+            this.init = function() {
+                // Ajax que pregunta current time o que saca current time de algún lado.
+                self.askTime()  // Current time está en centésimas de segundo.
+                self._timer = $.timer(self.updateTimer, self.incrementTime, true);
+            };
+        }
 
-                $("#iniciar").click(function(e){
-                    e.preventDefault();
-                    if($("#hashtag").val()=='') return;
-                    try{
-                        freq = freq * parseInt($("#freq-id").val());
-                    }catch(e) {
-                        freq = 5000;
-                    }
-                    //alert("Tiempo de espera: " + (freq/1000) + " seg");
-                    $("#tweets").empty();
-                    ws.send($("#hashtag").val());
-                    $(this).prop('disabled', true);
-                    $("#hashtag").prop('disabled', true);
-                    $("#detener").prop('disabled', false);
-                    $("#ht-select").html("Participa con <span>" + $("#hashtag").val() + "</span>");
-                    detener = false;
-                    $(".busqueda").slideUp();
-                    $(".info").fadeIn();
-                });
+        function ParseTweet(evt) {
+            try {
+                var arr = JSON.parse(evt.data);
+                lastTimeout = (arr.length * freq) ;
+                $("ultimoTweet").val(evt.last);
+                var ip;
+                for(ip=0; ip < arr.length; ip+=1) {
+                     try {
+                        var j = JSON.parse(arr[ip]);
+                        console.log(j);
+                        publicador(j, freq * ip);
 
-                $("#detener").click(function(e){
-                    e.preventDefault();
-                    detener = true;
-                    $(this).prop('disabled', true);
-                    $("#hashtag").prop('disabled', false);
-                    $("#iniciar").prop('disabled', false);
-                    $(".info").fadeOut();
-                    $(".busqueda").slideDown();
-                    freq = 1000;
-                });
-
-                $("#hashtag").keyup(function(e) {
-                    console.log(e.keyCode);
-                    if(e.keyCode == 13){
-                    $("#iniciar").click();
-                    }
-                });
-
-                ws.onmessage = function(evt) {
-                    try {
-                        var arr = JSON.parse(evt.data);
-                        lastTimeout = (arr.length * freq) ;
-                        var ip;
-                        for(ip=0; ip < arr.length; ip+=1) {
-                             try {
-                                var j = JSON.parse(arr[ip]);
-                                console.log(j);
-                                publicador(j, freq * ip);
-
-                            } catch (e){
-                                console.log(e);
-                            }
-                       }
-                    } catch(e) {
+                    } catch (e){
                         console.log(e);
                     }
-                    setTimeout(function() {
-                        if(detener) return;
-                        ws.send($("#hashtag").val());
-                    }, lastTimeout );
-                };
+               }
+            } catch(e) {
+                console.log(e);
+            }
+        };
 
-                function publicador(json, timeout) {
-                    if (detener) return;
-                    setTimeout(function() {
-                        var $temp = $("#template").clone();
-                        $temp.attr("id", "");
-                        $temp.find(".user-text").html("<strong>" + json["user"]["name"]+ "</strong>");
-                        var str =  "@" +  json["user"]["screen_name"] ;
-                        if (json["user"]["location"] != undefined) {
-                            str+= " (" + json["user"]["location"] + ")";
-                        }
-                        $temp.find(".user-name").html(str);
-                        $temp.find(".img-profile").attr("src", json["user"]["profile_image_url"]);
-                        $temp.find(".text").html(json["text"].linkify_tweet());
-                        $temp.find(".fecha").html(new Date(json["created_at"]).toLocaleDateString() + " " + new Date(json["created_at"]).toLocaleTimeString());
-                        if(json["retweet_count"] != undefined)
-                            $temp.find(".retweet").html("<strong>RT: " + json["retweet_count"]+ "</strong>");
-                        try{
-                            if(json["media"][0]["media_url"] != undefined)
-                                $temp.find(".url-media").html("<img class='img-responsive img-rounded' src='" + json["media"][0]["media_url"] + "' />");
-                        } catch (e){}
-                        $temp.hide();
-                        //console.log("Time ->" + timeout);
-                        $("#tweets").prepend($temp);
-                        $temp.fadeIn(500);
-                    }, timeout);
+        function publicador(json, timeout) {
+            if (detener) return;
+            setTimeout(function() {
+                var $temp = $("#template").clone();
+                $temp.attr("id", "");
+                $temp.find(".user-text").html("<strong>" + json["user"]["name"]+ "</strong>");
+                var str =  "@" +  json["user"]["screen_name"] ;
+                if (json["user"]["location"] != undefined) {
+                    str+= " (" + json["user"]["location"] + ")";
                 }
-
-            }); // end- document.ready
-
-        })(jQuery);
+                $temp.find(".user-name").html(str);
+                $temp.find(".img-profile").attr("src", json["user"]["profile_image_url"]);
+                $temp.find(".text").html(json["text"].linkify_tweet());
+                $temp.find(".fecha").html(new Date(json["created_at"]).toLocaleDateString() + " " + new Date(json["created_at"]).toLocaleTimeString());
+                if(json["retweet_count"] != undefined)
+                    $temp.find(".retweet").html("<strong>RT: " + json["retweet_count"]+ "</strong>");
+                try{
+                    if(json["media"][0]["media_url"] != undefined)
+                        $temp.find(".url-media").html("<img class='img-responsive img-rounded' src='" + json["media"][0]["media_url"] + "' />");
+                } catch (e){}
+                $temp.hide();
+                //console.log("Time ->" + timeout);
+                $("#tweets").prepend($temp);
+                $temp.fadeIn(500);
+            }, timeout);
+        }
     </script>
+    <script type="text/javascript">
+    $(function () {
+        $('#desk').cycle({
+            fx:    'scrollRight',
+            delay: -1000
+        });
 
+        var hack_timer = new HackTimer()
+        hack_timer.init();
+    })
+    </script>
 </body>
 </html>
