--- a/templates/index.html
+++ b/templates/index.html
@@ -1,22 +1,7 @@
+{% extends "base.html" %}
 {% load staticfiles %}
-<!DOCTYPE html>
-<html lang="en">
 
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Formulario para subir archivos">
-    <meta name="author" content="Matias Varela">
-
-    <title>Hashtag Viewers</title>
-    <!-- Bootstrap Core CSS -->
-    <link href='http://fonts.googleapis.com/css?family=Orbitron' rel='stylesheet' type='text/css'/>
-    <link href="{% static 'css/bootstrap.css' %}" rel='stylesheet' type='text/css'/>
-    <link href="{% static 'css/style.css' %}" rel='stylesheet' type='text/css'/>
-
-</head>
-
-<body id="page-top" data-spy="scroll" data-target=".navbar-custom">
+{% block content %}
 
     <div class="container" id="desk">
 
@@ -53,11 +38,9 @@
             <div class="text"></div>
             <div class="url-media"></div>
         </div>
+{% endblock %}
 
-
-    <!-- Core JavaScript Files      -->
-    <script src="{% static 'js/jquery-2.1.4.min.js' %}"></script>
-    <script src="{% static 'js/bootstrap.min.js' %}"></script>
+{% block extra_body %}
     <script src="{% static 'js/jquery.timer.js' %}"></script>
     <script src="{% static 'js/jquery.cycle.all.js' %}"></script>
 
@@ -167,5 +150,4 @@
         hack_timer.init();
     })
     </script>
-</body>
-</html>
+{% endblock %}
