--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,17 @@
- body {
+@font-face {
+  font-family: 'Orbitron';
+  font-style: normal;
+  font-weight: 400;
+  src: local('Orbitron-Light'), local('Orbitron-Regular'), url(/static/fonts/HmnHiRzvcnQr8CjBje6GQvesZW2xOQ-xsNqO47m55DA.woff2) format('woff2');
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
+}
+
+body {
     font-family: 'Josefin Sans', sans-serif;
     font-size: 20px;
-    background-image: url(/static/img/bg.png);
-    background-size:   cover;                      /* <------ */
+    background-size:   cover;
     background-repeat: no-repeat;
- }
+}
 h1 {
     font-size: 5em;
     margin-bottom: 60px;
@@ -79,6 +86,7 @@ h2 {
     top: 5px
 }
 
+/* Tweets */
 
 .tweet {
     padding: 5px 15px;
@@ -143,30 +151,21 @@ h2 {
     max-height: 400px;
 }
 
-/*#timer-cont {
-    text-align: center;
+/* timer */
+
+#timer-cont {
     position: relative;
-    margin-top: 300px;
-    width: 100px;
-    font-family: 'Orbitron', sans-serif;
-    font-size: 60px;
-    color: #fff;
-}
-*/
-#timer {
-    color:#888;
-    text-shadow:0px 0px 1px #333;
-    font-size:150px;
-    position:relative;
-    top:-27px;
-    left:-10px;
+    width: 500px;
+    text-align: center;
+    left: 16%;
 }
 
-.deks {
-    background-color: white;
-    width: 1000px;
-    height: 600px;
-    border-radius: 1px;
-    border-width: 1px;
-    border-style: solid;
+#timer {
+    font-size: 60px;
+    font-family: 'Orbitron', sans-serif;
+    position: absolute;
+    margin-top: 200px;
+    color: #888 !important;
+    text-shadow: 0px 0px 1px #333;
+    font-size: 100px;
 }
